feat(core): map embedded properties to flattened columns in row reader and writer
mapRow groups embedded sub-properties by host field; if every sub-column
in a group is null the host field is set to null instead of leaving an
empty embeddable instance. Otherwise the embeddable is lazily created
through PersistentProperty.write so the sub-values land on the host's
fields directly. SqlStatement now accepts null binding elements (mirroring
NativeQuery) so a null embedded host can bind SQL NULL to every flattened
sub-column.